网页布局练习

--- a/HtmlTest/练习网页布局（以div块浮动方式）.html
+++ b/HtmlTest/练习网页布局（以div块浮动方式）.html
@@ -123,6 +123,7 @@
             height:35px;
             background-color:sienna;
             margin: 0 auto;
+            margin-top: 10px;
         }
     </style>
 </head>
