--- a/HtmlTest/练习-使用伪类美化超级链接.html
+++ b/HtmlTest/练习-使用伪类美化超级链接.html
@@ -16,6 +16,8 @@
         height:50px;
         border:1px solid red;
         margin:100px auto;
+        /*用于给盒子加上背景图片*/
+        /*background-image: url(img/03/01.jpg);*/
     }
     .nav ul{
         /*去掉小圆点*/
