--- a/HtmlTest/999.练习-博雅互动首页/index.html
+++ b/HtmlTest/999.练习-博雅互动首页/index.html
@@ -25,7 +25,7 @@
         clear: both;
     }
 
-    /*板块居中，单独写的公共样式*/
+    /*版心的居中，单独写的公共样式*/
     .inner_c {
         width: 1000px;
         /*居中*/
@@ -33,6 +33,7 @@
     }
 
     .header {
+        /*导航也是通栏，因此没有width*/
         height: 58px;
         /*颜色在FW中用吸管从设计图中取，导航中的logo图片也从设计图中切片，注意顶着左侧版心边界切，这样一会不用加padding*/
         background-color: #191D3A;
@@ -151,6 +152,54 @@
         /*高为图片实际高度*/
         height: 465px;
         background: url("images/banner.jpg") no-repeat center top;
+        /*一个绝对定位的元素，如果父辈元素中出现了也定位了的元素，那么将以父辈这个元素，为参考点。
+        为了让小圆点可以以父容器banner做参考点，父容器设置为相对定位但不用设置具体值
+        即子绝父相*/
+        position: relative;
+    }
+
+    /*通版底部的小圆点,宽高范围从设计图切出来，使用绝对定位设定其位置*/
+    .banner .circles {
+        width: 120px;
+        height: 16px;
+        /*background-color: pink;*/
+        /*一个绝对定位的元素，如果父辈元素中出现了也定位了的元素，那么将以父辈这个元素，为参考点。
+        */
+        position: absolute;
+        /*使用bottom让其距离父容器banner的底部，距离自己切*/
+        bottom: 18px;
+        /*绝对定位元素的居中，固定,左定位50%，margin-left负的宽度的一半*/
+        left: 50%;
+        margin-left: -60px;
+    }
+
+    .banner .circles ol {
+        list-style: none;
+        padding-top: 3px;
+    }
+
+    .banner .circles ol li {
+        float: left;
+        width: 12px;
+        height: 12px;
+        /*注意最后一个li不需要margin-right否则放不下，因此再↓覆盖单独写一个样式*/
+        margin-right: 15px;
+        /*兼容IE6双倍margin*/
+        _font-size: 0px;
+        /*圆点图片是用12*12大小在FW中直接拉圆做出来的*/
+        background: url("images/dian1.png") no-repeat;
+        /*让鼠标变为小手*/
+        cursor: pointer;
+
+    }
+
+    .banner .circles ol li.last {
+        margin-right: 0px;
+    }
+
+    /*第一个小点(或动态哪个被选中的li)比较特殊，要使用高亮背景图样式*/
+    .banner .circles ol li.current {
+        background: url("images/dian2.png") no-repeat;
     }
 
     /*中间部分的样式*/
@@ -169,6 +218,7 @@
         /*标尺量得四个产品展示子块宽218（最后一个子块为217），间距43
         218*3+217+43*3=1000
         */
+        position: relative;
     }
 
     .content .product ul {
@@ -212,6 +262,7 @@
     .content .product ul li p.play {
         /*让容器内超链接文字居中*/
         text-align: center;
+
     }
 
     .content .product ul li p.play a {
@@ -227,6 +278,45 @@
         background: url(images/sanjiaoxing.png) no-repeat right center;
     }
 
+    /*内容板块底部的小圆点列制作*/
+    .content .product .circles {
+        width: 117px;
+        height: 12px;
+        background-color: red;
+        /*子绝父相，定位在父容器底部*/
+        position: absolute;
+        /*压住底边线一半=height的一半*/
+        bottom: -6px;
+        left: 50%;
+        /*因为宽=117不能整除就近使用118*/
+        margin-left: -59px;
+        /*白色背景色，看起来截断了底边线*/
+        background-color: white;
+
+    }
+
+    .content .product .circles ol {
+        list-style: none;
+        padding-left: 14px;
+    }
+
+    .content .product .circles ol li {
+        float: left;
+        height: 12px;
+        width: 12px;
+        margin-right: 14px;
+        background: url("images/dian1.png") no-repeat;
+        cursor: pointer;
+    }
+
+    .content .product .circles ol li.last {
+        margin-right: 0px;
+    }
+
+    .content .product .circles ol li.current {
+        background: url("images/dian2.png") no-repeat;
+    }
+
     /*产品与招聘板块*/
     .content .info {
         padding-top: 53px;
@@ -238,6 +328,7 @@
         /*background-color: yellow;*/
         background: url("images/bynewsbg.jpg") no-repeat;
         padding-top: 111px;
+        position: relative;
     }
 
     .content .info .boyaajobs {
@@ -275,6 +366,21 @@
         color: red;
     }
 
+    .content .info .boyaanews .more {
+        position: absolute;
+        width: 66px;
+        height: 28px;
+        background: url("images/more.png") no-repeat;
+        text-indent: -999em;
+        /*子绝父相*/
+        top: 39px;
+        left: 219px;
+    }
+
+    .content .info .boyaanews a.more:hover {
+        background: url("images/more2.png") no-repeat;
+    }
+
     /*招聘模块*/
     .content .info .boyaajobs .title {
         /*调整图片位置*/
@@ -298,29 +404,68 @@
         color: white;
         font-size: 14px;
         /*加粗*/
-        font-weight:bold;
+        font-weight: bold;
     }
-    .content .info .boyaajobs ul{
+
+    .content .info .boyaajobs ul {
         padding-left: 20px;
-        width:305px;
+        width: 305px;
         list-style: none;
     }
-    .content .info .boyaajobs ul li{
-        border-bottom:1px solid #6FDEA3;
+
+    .content .info .boyaajobs ul li {
+        border-bottom: 1px solid #6FDEA3;
         line-height: 37px;
-        height:37px;
+        height: 37px;
     }
-    .content .info .boyaajobs ul li a{
+
+    .content .info .boyaajobs ul li a {
         font-size: 12px;
         color: white;
         text-decoration: none;
     }
-    .content .info .boyaajobs ul li a:hover{
+
+    .content .info .boyaajobs ul li a:hover {
         color: orange;
+    }
+
+    /*底部部分*/
+    .footer {
+        height: 91px;
+        background-color: #191D3A;
+    }
+    .footer .leftpart{
+        float: left;
+        width: 300px;
+        height: 91px;
+        /*background-color: yellow;*/
+        line-height: 91px;
+    }
+    .footer .leftpart a{
+        list-style: none;
+        text-decoration: none;
+        color: #FFFFFF;
+        font-size: 14px;
+    }
+    .footer .rightpart{
+        float: left;
+        width: 700px;
+        height: 91px;
+        /*background-color:green;*/
+        text-align: right;
+        line-height: 91px;
+        color: #FFFFFF;
+        font-size:14px;
+    }
+    .footer .rightpart .jinghui{
+        width:40px;
+        /*使用相对定位微调国徽位置*/
+        position: relative;
+        top: 20px;
     }
 </style>
 <body>
-<!--导航部分-->
+<!--导航部分,每放一个div就要想到它的作用，导航栏也属于通栏-->
 <div class="header">
     <!--导航的版心-->
     <div class="inner_c">
@@ -345,7 +490,19 @@
 </div>
 <!--导航条下的Banner通版，由于图片较大为不出现导航条使用块背景图实现
 注意不要将其放在导航的div中，否则就得用隔墙法清除浮动了-->
-<div class="banner"></div>
+<div class="banner">
+    <!--通版图片底部的小圆点，用切图量出圆点占据div宽高，圆点用切图或者CSS3做-->
+    <div class="circles">
+        <!--制作小圆点-->
+        <ol>
+            <li class="current"></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li class="last"></li>
+        </ol>
+    </div>
+</div>
 <!--中间内容部分-->
 <!--div content负责贯穿整个横版页面（横版山峰全背景图），内部的div inner_负责居中版心；样板设计-->
 <div class="content">
@@ -402,7 +559,17 @@
                     </p>
                 </li>
             </ul>
+            <!--产品板块底边线并没有被折断，而是由一个白色背景的div绝对定位盖住了形成的，小圆点制作参考通版-->
+            <div class="circles">
+                <ol>
+                    <li class="current"></li>
+                    <li></li>
+                    <li></li>
+                    <li class="last"></li>
+                </ol>
+            </div>
         </div>
+
         <!--中下方的新闻和招聘板块，并排要用到浮动-->
         <div class="info">
             <!--新闻-->
@@ -413,6 +580,7 @@
                     <li><span>09 / 28</span><a href="#">博雅国际博客大赛(BPT)在澳门落幕</a></li>
                     <li><span>09 / 28</span><a href="#">博雅国际博客大赛(BPT)在澳门落幕</a></li>
                 </ul>
+                <a href="#" class="more">MORE</a>
             </div>
             <!--招聘-->
             <div class="boyaajobs">
@@ -429,6 +597,22 @@
                     <li><a href="#">大数据开发工程师</a></li>
                 </ul>
             </div>
+        </div>
+    </div>
+</div>
+<!--底部-->
+<!--以防万一，隔个墙,测试不写也没问题-->
+<div class="cl"></div>
+<div class="footer">
+    <div class="inner_c">
+        <div class="leftpart">
+            <a href="#">网站地图</a>
+            <span>|</span>
+            <a href="#">免责声明</a>
+        </div>
+        <div class="rightpart">
+            地址信息
+            <img src="images/govIcon.gif" class="jinghui">
         </div>
     </div>
 </div>
