仿京东首页公共部分完成

--- a/HtmlTest/999.练习-仿京东首页/index.html
+++ b/HtmlTest/999.练习-仿京东首页/index.html
@@ -113,6 +113,128 @@
         <a href="#"> 清仓</a>
     </div>
 </div>
+<!--公有商品导航nav部分，外层是通栏，里面的版心-->
+<div class="jd-nav">
+    <div class="w">
+        <!--下拉菜单,分为上盒子和下盒子，上盒子和父盒子一样大，下盒子被挤下来-->
+        <div class="dropdown">
+            <!--上盒子-->
+            <div class="dt">
+                <a href="#">全部商品分类</a>
+            </div>
+            <!--下盒子,商品分类列表-->
+            <div class="dd">
+                <div class="item">
+                    <h3>家用电器</h3>
+                    <span>></span>
+                </div>
+                <div class="item">
+                    <h3>手机、数码、京东通信</h3>
+                    <span>></span>
+                </div>
+                <div class="item">
+                    <h3>手机、数码、京东通信</h3>
+                    <span>></span>
+                </div>
+                <div class="item">
+                    <h3>手机、数码、京东通信</h3>
+                    <span>></span>
+                </div>
+                <div class="item">
+                    <h3>手机、数码、京东通信</h3>
+                    <span>></span>
+                </div>
+                <div class="item">
+                    <h3>手机、数码、京东通信</h3>
+                    <span>></span>
+                </div>
+                <div class="item">
+                    <h3>手机、数码、京东通信</h3>
+                    <span>></span>
+                </div>
+                <div class="item">
+                    <h3>手机、数码、京东通信</h3>
+                    <span>></span>
+                </div>
+                <div class="item">
+                    <h3>手机、数码、京东通信</h3>
+                    <span>></span>
+                </div>
+                <div class="item">
+                    <h3>手机、数码、京东通信</h3>
+                    <span>></span>
+                </div>
+                <div class="item">
+                    <h3>手机、数码、京东通信</h3>
+                    <span>></span>
+                </div>
+                <div class="item">
+                    <h3>手机、数码、京东通信</h3>
+                    <span>></span>
+                </div>
+                <div class="item">
+                    <h3>手机、数码、京东通信</h3>
+                    <span>></span>
+                </div>
+                <div class="item">
+                    <h3>手机、数码、京东通信</h3>
+                    <span>></span>
+                </div>
+                <div class="item">
+                    <h3>手机、数码、京东通信</h3>
+                    <span>></span>
+                </div>
+            </div>
+        </div>
+        <!--导航列表项-->
+        <div class="navitems">
+            <ul>
+                <li class="new"><a href="#">服装城</a></li>
+                <li><a href="#">美妆馆</a></li>
+                <li><a href="#">超市</a></li>
+                <li><a href="#">全球购</a></li>
+                <li><a href="#">闪购</a></li>
+                <li><a href="#">团购</a></li>
+                <li><a href="#">拍卖</a></li>
+                <li><a href="#">金融</a></li>
+                <li><a href="#">智能</a></li>
+            </ul>
+        </div>
+        <!--特价自行车-->
+        <div class="bike"><a href="#"></a></div>
+    </div>
+</div>
+
+<!--首页index专属部分-->
+<!--大banner超链接背景图-->
+<div class="banner604">
+    <a href="#"></a>
+</div>
+<!--主体部分-->
+<div class="w main clearfix">
+    <!--轮播图-->
+    <div class="slider">
+        <a href="#"><img src="images/slider1.jpg" alt=""></a>
+        <!--小圆点-->
+        <ul class="circle">
+            <li class="current">1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+            <li>5</li>
+            <li>6</li>
+        </ul>
+        <!--轮播图左右透明箭头盒子,最优化方法两个箭头超链接存在与一个初始隐藏的盒子，hover的时候显示该盒子-->
+        <div class="arrow">
+            <a href="javascript:;" class="arrow-l"></a>
+            <a href="javascript:;" class="arrow-r"></a>
+        </div>
+    </div>
+    <!--京东新闻-->
+    <div class="news">
+
+    </div>
+</div>
 
 
 <!--通用底部部分-->
