仿京东首页页面部分完成
无交互

--- a/HtmlTest/999.练习-仿京东首页/index.html
+++ b/HtmlTest/999.练习-仿京东首页/index.html
@@ -226,16 +226,152 @@
         </ul>
         <!--轮播图左右透明箭头盒子,最优化方法两个箭头超链接存在与一个初始隐藏的盒子，hover的时候显示该盒子-->
         <div class="arrow">
-            <a href="javascript:;" class="arrow-l"></a>
-            <a href="javascript:;" class="arrow-r"></a>
+            <a href="javascript:;" class="arrow-l"><</a>
+            <a href="javascript:;" class="arrow-r">></a>
         </div>
     </div>
     <!--京东新闻-->
     <div class="news">
+        <!--京东快报-->
+        <div class="jd-news">
+            <!--新闻标题-->
+            <div class="dt">
+                <h3>京东快报</h3>
+                <a href="#">更多 ></a>
+            </div>
+            <!--新闻内容-->
+            <div class="dd">
+                <ul>
+                    <li><a href="#"><span>[特惠]</span>1元秒杀</a></li>
+                    <li><a href="#"><span>[公告]</span>母婴类APP</a></li>
+                    <li><a href="#"><span>[特惠]</span>元秒杀</a></li>
+                    <li><a href="#"><span>[公告]</span>母婴类APP</a></li>
+                    <li><a href="#"><span>[特惠]</span>1元秒杀</a></li>
+                </ul>
+            </div>
+        </div>
+        <!--生活服务-->
+        <div class="lifeservi">
+            <div class="dt">
+                <h3>生活服务</h3>
+            </div>
+            <div class="dd">
+                <ul>
+                    <!--超链接标签添加一个“送”图标背景图-->
+                    <li class="lifeservi-icon1"><a href="#" class="song">
+                        <!--小图标,使用背景图-->
+                        <i></i>
+                        <!--图标文字-->
+                        <span>话费</span>
+                    </a>
+                    </li>
+                    <li class="lifeservi-icon2"><a href="#">
+                        <!--小图标,使用背景图-->
+                        <i></i>
+                        <!--图标文字-->
+                        <span>话费</span>
+                    </a>
+                    </li>
+                    <li class="lifeservi-icon3"><a href="#">
+                        <!--小图标,使用背景图-->
+                        <i></i>
+                        <!--图标文字-->
+                        <span>话费</span>
+                    </a>
+                    </li>
+                    <li class="lifeservi-icon1">
+                        <a href="#">
+                            <!--小图标,使用背景图-->
+                            <i></i>
+                            <!--图标文字-->
+                            <span>话费</span>
+                        </a>
+                    </li>
+                    <li class="lifeservi-icon1">
+                        <a href="#">
+                            <!--小图标,使用背景图-->
+                            <i></i>
+                            <!--图标文字-->
+                            <span>话费</span>
+                        </a>
+                    </li>
+                    <li class="lifeservi-icon1">
+                        <a href="#">
+                            <!--小图标,使用背景图-->
+                            <i></i>
+                            <!--图标文字-->
+                            <span>话费</span>
+                        </a>
+                    </li>
+                    <li class="lifeservi-icon1">
+                        <a href="#">
+                            <!--小图标,使用背景图-->
+                            <i></i>
+                            <!--图标文字-->
+                            <span>话费</span>
+                        </a>
+                    </li>
+                    <li class="lifeservi-icon1">
+                        <a href="#">
+                            <!--小图标,使用背景图-->
+                            <i></i>
+                            <!--图标文字-->
+                            <span>话费</span>
+                        </a>
+                    </li>
+                    <li class="lifeservi-icon1">
+                        <a href="#">
+                            <!--小图标,使用背景图-->
+                            <i></i>
+                            <!--图标文字-->
+                            <span>话费</span>
+                        </a>
+                    </li>
+                    <li class="lifeservi-icon1">
+                        <a href="#">
+                            <!--小图标,使用背景图-->
+                            <i></i>
+                            <!--图标文字-->
+                            <span>话费</span>
+                        </a>
+                    </li>
+                    <li class="lifeservi-icon1">
+                        <a href="#">
+                            <!--小图标,使用背景图-->
+                            <i></i>
+                            <!--图标文字-->
+                            <span>话费</span>
+                        </a>
+                    </li>
+                    <li class="lifeservi-icon1">
+                        <a href="#">
+                            <!--小图标,使用背景图-->
+                            <i></i>
+                            <!--图标文字-->
+                            <span>话费</span>
+                        </a>
+                    </li>
 
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
-
+<!--双11某活动 清除浮动-->
+<div class="w todays clearfix">
+    <!--惊喜夜-->
+    <div class="night-l">
+        <img src="images/night.jpg" alt="">
+    </div>
+    <div class="night-r">
+        <ul>
+            <li><a href="#"><img src="images/1.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/2.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/3.jpg" alt=""></a></li>
+            <li><a href="#"><img src="images/4.jpg" alt=""></a></li>
+        </ul>
+    </div>
+</div>
 
 <!--通用底部部分-->
 <div class="jd-footer">
