--- a/JavaScriptTest/临时测试.html
+++ b/JavaScriptTest/临时测试.html
@@ -27,8 +27,16 @@
             console.log("Hello World!")
         }
     </script>
+    <style type="text/css">
+        .box1{
+            padding-top: 60px;
+            background-color: red;
+        }
+    </style>
 </head>
 <body>
-
+<div class="box1">
+    123
+</div>
 </body>
 </html>
