--- a/JavaScriptTest/临时测试.html
+++ b/JavaScriptTest/临时测试.html
@@ -8,6 +8,10 @@
         console.log(a.join(""));//123
         var s="xiaomiao";
         console.log(s.split(""));//["x", "i", "a", "o", "m", "i", "a", "o"]
+        var date =new Date();
+        console.log(date.getTime());//时间戳
+        console.log(date.toDateString());
+        console.log(date.toLocaleDateString());
     </script>
     <style type="text/css">
         .box1 {
