--- a/JavaScriptTest/临时测试.html
+++ b/JavaScriptTest/临时测试.html
@@ -6,12 +6,16 @@
     <script type="text/javascript">
         var a = [1, 2, 3];
         console.log(a.join(""));//123
-        var s="xiaomiao";
+        var s = "xiaomiao";
         console.log(s.split(""));//["x", "i", "a", "o", "m", "i", "a", "o"]
-        var date =new Date();
-        console.log(date.getTime());//时间戳
-        console.log(date.toDateString());
-        console.log(date.toLocaleDateString());
+        var txt1 = "123";
+        var txt2="456";
+        console.log(txt1.concat(txt2));
+        console.log(txt1);
+        console.log(txt2);
+        var s="abcdefg";
+        console.log(s.slice(3));
+        console.log(s.substring(3));
     </script>
     <style type="text/css">
         .box1 {
