--- a/JavaScriptTest/临时测试.html
+++ b/JavaScriptTest/临时测试.html
@@ -16,6 +16,9 @@
         var s="abcdefg";
         console.log(s.slice(3));
         console.log(s.substring(3));
+        var a=1;
+        var a=2;
+        console.log("A="+a);
     </script>
     <style type="text/css">
         .box1 {
