--- a/JavaScriptTest/20 手风琴效果（使用到18中封装的运动方法和获取样式方法）/index.html
+++ b/JavaScriptTest/20 手风琴效果（使用到18中封装的运动方法和获取样式方法）/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        ul{list-style: none}
-        *{margin:0; padding:0;}
+        ul{list-style: none}        *{margin:0; padding:0;}
         div{
             /*应该width: 1200px;，但是li切换时右侧会出现少许留白，减宽或者最后一个li右浮动抹去*/
             width: 1150px;
