--- a/JavaScriptTest/22 闭包相关练习/05 事件传递参数.html
+++ b/JavaScriptTest/22 闭包相关练习/05 事件传递参数.html
@@ -39,7 +39,7 @@
             box.style.left = box.offsetLeft + speed + "px";
         }
     }
-    btn1.onclick = move(5);
+    btn1.onclick = move(5);//因为move返回的是一个方法体因此可以这么写，还可以传递参数。
     btn2.onclick = move(-5);
 
 </script>
